﻿===== Hasor-RSF v1.2.0 (2017-01-?)
* 新增:
    01.RSF支持多协议，第一个加入的协议是 Hprose RPC。
    02.通过 Hprose RSF可以支持多达 25 种编程语言
* 改进:
    01.使用 Hasor 最新的ApiBinder扩展机制提供 RsfApiBinder，受此影响 RsfModule 不在是必需品。
    02.RsfPlugin 接口不在需要。
    03.RsfCenterEvent 枚举形式改为字符串形式。

===== Hasor-RSF v1.1.0 (2016-12-01)
* 新增:
    01.RsfApiBinder 新增 converToProvider 方法方便 RSF 服务注册到 Hasor。这样 Hasor 就可以依赖注入一个 RSF 服务。
    02.RsfPublisher 接口可以通过 AppContext 直接拿到了，不需要通过 RsContext 接口间接获取。极大的方便了服务注册。
    03.RsfUpdater 接口可以查询服务的提供者地址列表。
    04.新增 Telent命令， info 用来查看服务器配置信息、detail 用来查看服务的详细信息。
    05.新增 RSF_GATEWAY_IP、RSF_GATEWAY_PORT 两个参数配置，通过配置该参数将允许 RSF 通过端口映射工作在内网环境中。
* 改进:
    01.telnet 的交互信息可以被单独打印到一个日志文件中，另外 telnet 的输出日志更详细了。
    02.RsfCenter 的 client 部分进行重构优化，服务数据和RSF公用一套。降低了设计复杂度，减少了实现代码。
    03.Telent命令 list 只能用来显示服务列表，不在提供服务信息详情的显示。相关功能交给 detail 指令提供。
* 修复:
    01.Spring 插件在配置 RSF Bean 时始终使用默认 GNV 数据覆盖用户配置文件。
    02.修复在 tomcat 容器下 DiskCacheAddressPool 在执行地址本缓存时，爆Class找不到的异常。原因是创建的线程 ClassLoader 使用不当。

===== Hasor-RSF v1.0.1 (2016-11-08)
* 新增:
    01.Spring 集成。
* 修复:
    01.修复因 ClassLoader 不同而导致的 shutdown 过程中各种异常的问题。
    02.Fix ApiBinder 在注册 Provider 时部分方法无法将 Provider 识别为 Customer 的情况。

===== Hasor-RSF v1.0.0 (2016-10-27)
* 特色功能:
    01.支持服务热插拔：支持服务动态发布、动态卸载
    02.支持服务分组：支持服务分组、分版本
    03.支持多种方式调用：同步、异步、回调、接口代理
    04.支持多种模式调用：RPC模式调用、Message模式调用
        RPC     模式: 远程调用会等待并返回执行结果。适用于一般方法。遇到耗时方法会有调用超时风险
        Message 模式: 远程调用当作消息投递到远程机器，不会产生等待，可以看作是一个简单的 MQ。适合于繁重的耗时方法
    05.支持点对点调用。RSF的远程调用可以点对点定向调用，也可以集群大规模部署集中提供同一个服务
    06.支持虚拟机房。通过配置虚拟机房策略可以降低跨机房远程调用
    07.支持泛化调用。简单的理解，泛化调用就是不依赖二方包，通过传入方法名，方法签名和参数值，就可以调用服务
    08.支持隐式传参。可以理解隐式传参的含义为，不需要在接口上明确声明参数。在发起调用的时传递到远端
    09.内置 Telnet 控制台，可以命令行方式直接管理机器
    10.支持 offline/online 动作。
* 扩展性:
    01.支持第三方集成，可以独立使用,也可以和 Spring、Jfinal等第三方框架整合使用
    02.支持拦截器RsfFilter，开发者可以通过扩展 Filter 实现更多需求
    03.支持自定义序列化。默认使用内置 Hessian 4.0.7 序列化库
    04.支持Telnet控制台自定义指令。通过扩展控制台指令，可以发挥更大想象空间
* 稳定性(参数可配置):
    01.最大发并发请求数配置（默认:200）