@@ -16,7 +16,6 @@
     <description>the Hasor Remote Service Framework project.</description>
 
     <!-- 配置属性 -->
-    <!-- 配置属性 -->
     <properties>
         <hasor.shortname>RSF-</hasor.shortname>
         <project.website>http://www.hasor.net/</project.website>
