@@ -13,7 +13,7 @@
 // * See the License for the specific language governing permissions and
 // * limitations under the License.
 // */
-//package net.hasor.rsf.rpc.net;
+//package net.hasor.rsf.protocol.rsf;
 //import io.netty.channel.Channel;
 //import io.netty.channel.ChannelHandlerContext;
 //import io.netty.channel.ChannelInboundHandlerAdapter;
@@ -22,36 +22,27 @@
 //import net.hasor.rsf.InterAddress;
 //import net.hasor.rsf.RsfEnvironment;
 //import net.hasor.rsf.domain.ProtocolStatus;
+//import net.hasor.rsf.domain.RequestInfo;
+//import net.hasor.rsf.domain.ResponseInfo;
 //import net.hasor.rsf.domain.RsfConstants;
-//import net.hasor.rsf.domain.RsfException;
-//import net.hasor.rsf.transform.protocol.RequestInfo;
-//import net.hasor.rsf.transform.protocol.ResponseInfo;
 //import org.more.util.StringUtils;
 //import org.slf4j.Logger;
 //import org.slf4j.LoggerFactory;
 //
 //import java.net.InetSocketAddress;
-//import java.net.URISyntaxException;
-//import java.util.concurrent.atomic.AtomicBoolean;
 ///**
 // * RSF协议之间的握手。
 // * @version : 2014年11月4日
 // * @author 赵永春(zyc@hasor.net)
 // */
-//public class RpcCodec extends ChannelInboundHandlerAdapter {
-//    protected     Logger        logger     = LoggerFactory.getLogger(getClass());
-//    private final AtomicBoolean shakeHands = new AtomicBoolean(false);
-//    private final InterAddress     gatewayAddress;
-//    private       InterAddress     bindAddress;
-//    private       InterAddress     targetAddress;
-//    private final RsfEnvironment   rsfEnvironment;
-//    private final ReceivedListener rpcEventListener;
+//public class RpcShakeHands extends ChannelInboundHandlerAdapter {
+//    protected Logger logger = LoggerFactory.getLogger(getClass());
+//    private       InterAddress   gatewayAddress;
+//    private final RsfEnvironment rsfEnvironment;
 //    //
-//    public RpcCodec(RsfNetManager rsfNetManager) throws URISyntaxException {
-//        this.bindAddress = rsfNetManager.bindAddress("rsf");
-//        this.gatewayAddress = rsfNetManager.getGatewayAddress("rsf");
-//        this.rsfEnvironment = rsfNetManager.getRsfEnvironment();
-//        this.rpcEventListener = rsfNetManager.getReceivedListener();
+//    public RpcShakeHands(InterAddress gatewayAddress, RsfEnvironment rsfEnvironment) {
+//        this.gatewayAddress = gatewayAddress;
+//        this.rsfEnvironment = rsfEnvironment;
 //    }
 //    @Override
 //    public void handlerAdded(final ChannelHandlerContext ctx) throws Exception {
@@ -65,28 +56,7 @@
 //        super.handlerAdded(ctx);
 //    }
 //    @Override
-//    public void channelActive(ChannelHandlerContext ctx) throws Exception {
-//        logger.info("connected form {}", ctx.channel().remoteAddress());
-//        if (!this.shakeHands.get()) {
-//            RequestInfo request = new RequestInfo(RsfConstants.Version_1);
-//            request.setRequestID(-1);
-//            request.setTargetMethod("ASK_HOST_INFO");
-//            ctx.pipeline().writeAndFlush(request);//发送请求握手数据包
-//            logger.info("handshake -> ask, socket : ", ctx.channel());
-//            super.channelActive(ctx);
-//        }
-//    }
-//    @Override
 //    public void channelRead(ChannelHandlerContext ctx, Object msg) throws Exception {
-//        if (this.shakeHands.get()) {
-//            /*   */
-//            if (msg instanceof RequestInfo) {
-//                this.rpcEventListener.receivedMessage(this.targetAddress, (RequestInfo) msg);
-//            } else if (msg instanceof ResponseInfo) {
-//                this.rpcEventListener.receivedMessage(this.targetAddress, (ResponseInfo) msg);
-//            }
-//            return;
-//        }
 //        //
 //        InetSocketAddress remoteAddress = (InetSocketAddress) ctx.pipeline().channel().remoteAddress();
 //        if (msg instanceof RequestInfo) {
@@ -116,18 +86,5 @@
 //            this.channelRegister.completed(this.targetAddress, netChannel);
 //            logger.info("handshake -> ready for {}", this.targetAddress);
 //        }
-//    }
-//    //
-//    @Override
-//    public void channelInactive(ChannelHandlerContext ctx) throws Exception {
-//        logger.info("close socket for {}.", this.targetAddress);
-//        this.channelRegister.failed(this.targetAddress, new RsfException(ProtocolStatus.NetworkError, "channel Inactive."));
-//        ctx.close();
-//    }
-//    @Override
-//    public void exceptionCaught(ChannelHandlerContext ctx, Throwable cause) throws Exception {
-//        logger.error("close socket=" + this.targetAddress + " with error -> " + cause.getMessage(), cause);
-//        this.channelRegister.failed(this.targetAddress, cause);
-//        ctx.close();
 //    }
 //}
