@@ -1,11 +1,13 @@
 ﻿===== Hasor-RSF v1.2.0 (2017-01-?)
 * 新增:
-    01.RSF支持多协议，第一个加入的协议是 Hprose RPC。
-    02.通过 Hprose RSF可以支持多达 25 种编程语言
+    01.加入多协议支持，第一个被支持的协议是 Hprose RPC
+    02.夸语言，通过 Hprose RSF可以支持多达 25 种编程语言
+    03.自定义 RPC 协议支持，除了 RSF、Hprose 之外您可以制定自己的 RPC 传输协议。
 * 改进:
     01.使用 Hasor 最新的ApiBinder扩展机制提供 RsfApiBinder，受此影响 RsfModule 不在是必需品。
     02.RsfPlugin 接口不在需要。
     03.RsfCenterEvent 枚举形式改为字符串形式。
+    04.兼容 Spring 4.x，和 Spring Boot。
 
 ===== Hasor-RSF v1.1.0 (2016-12-01)
 * 新增:
